--- a/audioApp/.github/workflow/main.yaml
+++ b/audioApp/.github/workflow/main.yaml
@@ -5,7 +5,7 @@ jobs:
   format-and-check-code:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/chekcout@v4
+      - uses: actions/checkout@v4
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
